--- a/Admin/app/src/main/res/values/strings.xml
+++ b/Admin/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Admin</string>
-
+    <string name="open_create">Open/Create Group</string>
     <string name="groupid">Group ID</string>
     <string name="user_name">Your Name</string>
     <string name="join">Join</string>
