--- a/Admin/app/src/main/res/values/strings.xml
+++ b/Admin/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="question">Question</string>
     <string name="value">Value</string>
     <string name="answer">Answer</string>
+    <string name="questions">Questions</string>
 </resources>
