comments added in admin

--- a/Admin/app/src/main/res/values/strings.xml
+++ b/Admin/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="value">Value</string>
     <string name="answer">Answer</string>
     <string name="questions">Questions</string>
+    <string name="no_answers">No answers for this question</string>
 </resources>
